--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "app.livetouch",
-    "slug": "app.livetouch",
-    "version": "1.0.1",
+    "name": "LiveTouch",
+    "slug": "livetouch",
+    "version": "1.0.3",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -13,9 +13,11 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
+      "bundleIdentifier": "com.livetouch.app",
       "supportsTablet": true
     },
     "android": {
+      "package": "com.livetouch.app",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
@@ -25,6 +27,11 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "8c3d9a47-b6c3-4f30-8407-043e7b859645"
+      }
     }
   }
 }
