--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@google-cloud/recaptcha-enterprise-react-native": "^18.8.1",
     "@hookform/resolvers": "^5.2.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/hooks": "^100.1.0",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/native-stack": "^7.6.2",
@@ -28,17 +30,23 @@
     "react": "19.1.0",
     "react-hook-form": "^7.66.0",
     "react-native": "0.81.5",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.29.1",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "^4.1.3",
+    "react-native-recaptcha-enterprise": "^0.2.7",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
     "react-native-vector-icons": "^10.3.0",
+    "react-native-webview": "13.15.0",
     "socket.io-client": "^4.8.1",
     "yup": "^1.7.1"
   },
   "devDependencies": {
+    "@react-native-community/cli": "^20.0.2",
     "@types/react": "~19.1.0",
+    "babel-preset-expo": "^54.0.7",
+    "react-native-codegen": "^0.70.7",
     "typescript": "~5.9.2"
   },
   "private": true
