--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "expo": "~54.0.22",
     "expo-av": "^16.0.7",
     "expo-dev-client": "~6.0.17",
-    "expo-file-system": "^19.0.17",
+    "expo-file-system": "~19.0.19",
     "expo-image-picker": "^17.0.8",
     "expo-notifications": "^0.32.12",
     "expo-secure-store": "^15.0.7",
